<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/ad_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/enter_title"/>

    <EditText
        android:id="@+id/ad_uri_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:imeOptions="actionDone"
        android:hint="@string/enter_url"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/select_url_prefix"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radio_group_scheme_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/button_http"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/http"
                android:imeOptions="actionNext"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/button_asset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset"
                android:imeOptions="actionNext"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/button_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:imeOptions="actionNext"
                android:textAllCaps="true" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
